// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChatList renders correctly 1`] = `
<div
  className="chatlist"
>
  <div
    className="chatlistsearch"
  >
    <input
      className="search"
      placeholder="Search"
      type="text"
    />
    <div
      className="searchButton"
    />
  </div>
  <div
    className="chatbody"
  >
    <div
      className="box"
    >
      Hello, world!
    </div>
  </div>
</div>
`;

exports[`ChatList renders correctly 2`] = `
<div
  className="chatlist"
>
  <div
    className="chatlistsearch"
  >
    <input
      className="search"
      placeholder="Search"
      type="text"
    />
    <div
      className="searchButton"
    />
  </div>
  <div
    className="chatbody"
  >
    <div
      className="box"
    >
      Hello, world!
      <div
        className="chatlist"
      >
        <div
          className="loading"
        >
          Loading...
        </div>
      </div>
    </div>
  </div>
</div>
`;
